# rain-game

./: Cargo.toml  index.html  index.scss
src/: background.rs  color.rs  framerate.rs  gravity.rs  main.rs  movable.rs  npc.rs  player.rs  position.rs  rain.rs  score.rs  screen_object.rs  shack.rs  win_info.rs  world_init.rs  world_unit.rs
