[package]
name = "rain-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = ["bevy_asset", "bevy_sprite", "bevy_window", "bevy_winit", "bevy_render", "webgl2", "png", "jpeg", "x11"] }
fastrand = "2.3.0"
googletest = "0.14.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = "thin"
